--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "magritte-phyton"
+name = "magritte-python"
 version = "0.0.1"
-description = "Magritte Phyton"
+description = "Magritte Python"
 readme = "README.md"
 requires-python = ">=3.6"
 classifiers = [
